# drf-shop

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
shop/: pytest.ini
shop/api/: admin.py  backends.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
shop/api/management/commands/: bot.py  createdata.py
shop/api/migrations/: 0001_initial.py  0002_alter_category_options_alter_basket_namber_of_item.py  0003_rename_namber_of_item_basket_number_of_item.py  0004_comment.py  0005_comment_comment.py  0006_alter_productitem_discount.py
shop/api/templates/: account_activation_email.html  delivery_notification.html
shop/api/tests/: factories.py  test_client_views.py  test_view.py
shop/shop/: celery.py  settings.py  urls.py
